--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit
-langchain
-langchain-openai
-langchain-core
-langchain-community
+streamlit 
+langchain 
+langchain-google-genai 
+google-generativeai
